--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
+html,
+body,
+#root {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#info {
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  background: #181c20;
+  color: #8c92a4;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 32px;
+  pointer-events: none;
 }
